// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should act 1`] = `
Object {
  "addItemInput": "",
  "currentId": 0,
  "itemSearchInput": "",
  "selectedNode": "",
  "tree": Object {},
  "treeNodes": Object {},
}
`;

exports[`Tree should add node 1`] = `
Object {
  "addItemInput": "one",
  "currentId": 1,
  "itemSearchInput": "",
  "selectedNode": "",
  "tree": Object {
    "item-0": Object {},
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
  },
}
`;

exports[`Tree should add node 2`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-1": Object {},
      "item-2": Object {
        "item-3": Object {
          "item-4": Object {},
          "item-5": Object {},
          "item-6": Object {},
        },
      },
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;

exports[`Tree should collapse 1`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-1": Object {},
      "item-2": Object {},
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": true,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;

exports[`Tree should search 1`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "o",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-1": Object {},
      "item-2": Object {
        "item-3": Object {
          "item-4": Object {},
          "item-5": Object {},
          "item-6": Object {},
        },
      },
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;

exports[`Tree should search 2`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "ur",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-2": Object {
        "item-3": Object {
          "item-4": Object {},
          "item-5": Object {},
          "item-6": Object {},
        },
      },
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;

exports[`Tree should search 3`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "TWO",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-1": Object {},
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": true,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;

exports[`Tree should search 4`] = `
Object {
  "addItemInput": "four",
  "currentId": 7,
  "itemSearchInput": "",
  "selectedNode": "item-3",
  "tree": Object {
    "item-0": Object {
      "item-1": Object {},
      "item-2": Object {
        "item-3": Object {
          "item-4": Object {},
          "item-5": Object {},
          "item-6": Object {},
        },
      },
    },
  },
  "treeNodes": Object {
    "item-0": Object {
      "children": Array [
        "item-1",
        "item-2",
      ],
      "id": "item-0",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "",
      "title": "one",
    },
    "item-1": Object {
      "children": Array [],
      "id": "item-1",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "two",
    },
    "item-2": Object {
      "children": Array [
        "item-3",
      ],
      "id": "item-2",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-0",
      "title": "three",
    },
    "item-3": Object {
      "children": Array [
        "item-4",
        "item-5",
        "item-6",
      ],
      "id": "item-3",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-2",
      "title": "four",
    },
    "item-4": Object {
      "children": Array [],
      "id": "item-4",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-5": Object {
      "children": Array [],
      "id": "item-5",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
    "item-6": Object {
      "children": Array [],
      "id": "item-6",
      "isCollapsed": false,
      "isHighlighted": false,
      "parent": "item-3",
      "title": "four",
    },
  },
}
`;
